@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/rcicr_2IFC.R
 \name{batchGenerateCI2IFC}
 \alias{batchGenerateCI2IFC}
 \title{Generates multiple 2IFC classification images by participant or condition}
@@ -26,13 +27,13 @@ batchGenerateCI2IFC(data, by, stimuli, responses, baseimage, rdata,
 
 \item{targetpath}{Optional string specifying path to save jpegs to (default: ./cis)}
 
-\item{label}{Optional string to insert in file names of jepgs to make them easier to identify}
-
 \item{antiCI}{Optional boolean specifying whether antiCI instead of CI should be computed}
 
 \item{scaling}{Optional string specifying scaling method: \code{none}, \code{constant},  \code{matched} or \code{autoscale} (default)}
 
 \item{constant}{Optional number specifying the value used as constant scaling factor for the noise (only works for \code{scaling='constant'})}
+
+\item{label}{Optional string to insert in file names of jepgs to make them easier to identify}
 }
 \value{
 List of classification image data structures (which are themselves lists of pixel matrix of classification noise only, scaled classification noise only, base image only and combined)
