@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/rcicr.R
 \name{generateCI}
 \alias{generateCI}
 \title{Generates classification image}
@@ -18,9 +19,9 @@ generateCI(stimuli, responses, baseimage, rdata, saveasjpeg = TRUE,
 
 \item{saveasjpeg}{Boolean stating whether to additionally save the CI as jpeg image}
 
-\item{targetpath}{Optional string specifying path to save jpegs to (default: ./cis)}
-
 \item{filename}{Optional string to specify a file name for the jpeg image}
+
+\item{targetpath}{Optional string specifying path to save jpegs to (default: ./cis)}
 
 \item{antiCI}{Optional boolean specifying whether antiCI instead of CI should be computed}
 
