@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/rcicr.R
 \name{generateCINoise}
 \alias{generateCINoise}
 \title{Generate classification image noise pattern based on set of stimuli (matrix: trials, parameters), responses (vector), and sinusoid}
