@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/rcicr.R
 \name{generateNoiseImage}
 \alias{generateNoiseImage}
 \title{Generate single noise image based on parameter vector}
@@ -17,8 +18,8 @@ The noise pattern as pixel matrix
 Generate single noise image based on parameter vector
 }
 \examples{
-params <- rnorm(4092) # generates 4092 normally distributed random values
-s <- generateNoisePattern(img_size=256)
-noise <- generateNoiseImage(params, s)
+#params <- rnorm(4092) # generates 4092 normally distributed random values
+#s <- generateNoisePattern(img_size=256)
+#noise <- generateNoiseImage(params, s)
 }
 
