@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/rcicr_2IFC.R
 \name{generateStimuli2IFC}
 \alias{generateStimuli2IFC}
 \title{Generates 2IFC stimuli}
